--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dashgo",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,13 +14,16 @@
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.8.5",
     "apexcharts": "^3.28.3",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-hook-form": "^7.22.1",
+    "react-icons": "^4.2.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
