--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.3.0",
     "@hookform/resolvers": "^2.8.5",
     "apexcharts": "^3.28.3",
+    "axios": "^0.25.0",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
@@ -23,13 +24,17 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.22.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.34.12",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
     "@types/node": "^16.9.1",
     "@types/react": "^17.0.21",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "faker": "5.5.3",
+    "miragejs": "^0.1.43",
     "typescript": "^4.4.3"
   }
 }
